# app/Http/Controllers/JobsController.php
@@ -30,13 +30,33 @@ class JobsController extends Controller
 
     /**
      * @OA\Get(
-     *   tags={"API|MASTER|INDEX JOBS"},
+     *   tags={"API|MASTER|JOBS"},
      *   path="/api/jobs",
      *   summary="Jobs index",
      *     @OA\Parameter(
      *     name="search",
      *     in="query",
      *     @OA\Schema(type="string")
+     *   ),
+     *   @OA\Parameter(
+     *     name="limit",
+     *     in="query",
+     *     @OA\Schema(type="integer")
+     *   ),
+     *   @OA\Parameter(
+     *     name="sortBy",
+     *     in="query",
+     *     @OA\Schema(type="string")
+     *   ),
+     *   @OA\Parameter(
+     *     name="orderBy",
+     *     in="query",
+     *     @OA\Schema(type="string")
+     *   ),
+     *   @OA\Parameter(
+     *     name="currentPage",
+     *     in="query",
+     *     @OA\Schema(type="integer")
      *   ),
      *   @OA\Response(response="default", ref="#/components/responses/globalResponse")
      * )
@@ -53,8 +73,17 @@ class JobsController extends Controller
                 'updated_at'
             ],
             search: function (Builder $query) use ($request) {
-                $query->where('name', 'LIKE', "%{$request->search}%");
-            }
+                $query->where('name', 'ILIKE', "%{$request->search}%");
+            },
+            sortOption: [
+                'orderCol' => $request->sortBy,
+                'orderDir' => $request->orderBy
+            ],
+            paginateOption: [
+                'method' => 'paginate',
+                'length' => $request->limit,
+                'page' => $request->currentPage
+            ],
         );
         return ResponseFormatter::success($jobs, 'Data berhasil ditampilkan');
     }
@@ -75,10 +104,10 @@ class JobsController extends Controller
      * @param  \Illuminate\Http\Request  $request
      * @return \Illuminate\Http\Response
      */
-    
-     /**
+
+    /**
      * @OA\Post(
-     *   tags={"Api|Master|STORE JOBS"},
+     *   tags={"API|MASTER|JOBS"},
      *   path="/api/jobs/store/",
      *   summary="Jobs store",
      *   @OA\RequestBody(
@@ -130,7 +159,7 @@ class JobsController extends Controller
      */
     /**
      * @OA\Get(
-     *   tags={"API|MASTER|SHOW JOBS"},
+     *   tags={"API|MASTER|JOBS"},
      *   path="/api/jobs/show/{id}",
      *   summary="Jobs show",
      *   @OA\Parameter(
@@ -179,7 +208,7 @@ class JobsController extends Controller
      */
     /**
      * @OA\Put(
-     *   tags={"Api|MASTER|UPDATE JOBS"},
+     *   tags={"API|MASTER|JOBS"},
      *   path="/api/jobs/update/{id}",
      *   summary="Candidates update",
      *   @OA\Parameter(
@@ -239,7 +268,7 @@ class JobsController extends Controller
 
     /**
      * @OA\Delete(
-     *   tags={"Api|Master|DELETE JOBS"},
+     *   tags={"API|MASTER|JOBS"},
      *   path="/api/jobs/delete/{id}",
      *   summary="Jobs delete-file",
      *   @OA\Parameter(
